# ArchForge

./: .gitignore  plan.md  pyproject.toml  questions.md
archforge/: __init__.py  __main__.py  cli.py  config.py  lint.py  logging.py  main.py  middleware.py  models.py
archforge/architect/: __init__.py  designer.py  interventions.py
archforge/core/: __init__.py  experience.py  pipeline.py  primitive.py  roles.py  task.py
archforge/evaluator/: __init__.py  diagnosis.py  output.py  structural.py
archforge/executor/: __init__.py  embeddings.py  engine.py  llm.py
archforge/executor/agents/: __init__.py  base.py  chunker.py  classifier.py  critic.py  fact_checker.py  reader.py  regex_extractor.py  registry.py  summarizer.py  writer.py
archforge/host/: __init__.py  base.py  fake.py
archforge/judge/: __init__.py  base.py  scripted.py
archforge/llm/: __init__.py  base.py  scripted.py
archforge/store/: __init__.py  experience_store.py  task_index.py
archforge/stores/: __init__.py  _jsonl.py  attempt_store.py  spec_store.py  trace_store.py
phases/: phase1.md
