[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archforge"
version = "0.1.0"
description = "Self-learning multi-agent pipeline builder"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
archforge = "archforge.main:cli"

[tool.setuptools.packages.find]
include = ["archforge*"]

[tool.setuptools.package-data]
archforge = ["primitives/*.yaml", "interventions/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
